--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#673ab7</color>
     <color name="colorSecondary">#aa00ff</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorRed">#ff2026</color>
+    <color name="colorRed">#673AB7</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorAmber">#FFC400</color>
 </resources>
